fix overflow bug with slanted background

--- a/src/app/generate-report/page.module.css
+++ b/src/app/generate-report/page.module.css
@@ -6,9 +6,21 @@
     width: 100%;
     height: calc(100% - var(--nav-height));
     overflow-y: auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.reportPageContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding-block: var(--padding-block-medium);
+    width: 100%;
+    height: 100%;
     padding-inline: var(--padding-inline-medium);
     padding-block: var(--padding-block-medium);
-    position: relative;
+    overflow-y: auto;
 }
 
 .main::after {
